Bug fixed and preparing for OutBox Pattern For Transaction Management.